--- a/static/sass/style.scss
+++ b/static/sass/style.scss
@@ -1,5 +1,109 @@
+@import "./vars";
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+.titles {
+  font-family: "Montserrat", sans-serif;
+}
+
+.texts {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.navbar {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+  top: 10px;
+  width: 99%;
+  margin: 20px auto;
+  background-color: rgba(195, 195, 195, 0.6);
+  border-radius: 15px;
+  backdrop-filter: blur(20px);
+
+  .nav-items {
+    margin: 10px;
+    padding: 10px;
+  }
+}
+
+.form-container {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  width: 50%;
+  margin: 10px auto;
+  background-color: #c3c3c3;
+  border-radius: 15px;
+
+  form {
+    padding: 20px;
+  }
+
+  * {
+    border: 2px solid transparent;
+    font-size: 18px;
+    overflow: hidden;
+  }
+
+  p {
+    display: flex;
+    flex-flow: column nowrap;
+    margin: 2em 0;
+  }
+
+  label {
+    font-family: "Montserrat", sans-serif;
+  }
+
+  input {
+    padding: 8px 5px;
+    width: 100%;
+    border-radius: 5px;
+    background-color: #e0e0e0;
+
+    &[type="file"] {
+      cursor: pointer;
+      &::-webkit-file-upload-button {
+        cursor: pointer;
+        font-family: Montserrat;
+        border: none;
+        font-size: 14px;
+        margin: 0 10px;
+        padding: 5px;
+        color: #f2f2f2;
+        background-color: #2f80ed;
+        border-radius: 5px;
+      }
+      &:hover {
+        outline: none !important;
+        border: 2px solid #2f80ed;
+      }
+    }
+
+    &:focus {
+      outline: none !important;
+      border: 2px solid #2f80ed;
+    }
+  }
+
+  button {
+    padding: 5px 10px;
+    color: #f2f2f2;
+    background-color: #2f80ed;
+    border-radius: 5px;
+    cursor: pointer;
+
+    &:hover {
+      box-shadow: 0px 0px 10px rgba(47, 129, 237, 0.7);
+    }
+  }
 }
