--- a/static/sass/_vars.scss
+++ b/static/sass/_vars.scss
@@ -1,1 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+
+$primary-color: #f2b076;
+$info-color: #594061;
+$blue-color: #3b82f6;
+$success-color: #10b981; // green
+$warning-color: #fb9f23;
+$danger-color: #f44336;
+
+$dark-accent-color: #ec3f65;
+$dark-bg-color: #594061;
+$light-accent-color: #f1cb85;
+$light-bg-color: #f7f6f5;
+$light: #f2f2f2;
+$dark: #333;
+$deep-dark: #000;
+$deep-light: #fff;
+$grey: #e0e0e0;
