--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,10 +1,92 @@
-{% extends "base.html" %} {% block content %}
-<div>
-  <p>
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto eos
-    deserunt nobis, non iure necessitatibus cumque, placeat harum sapiente
-    deleniti similique ipsam adipisci? Quam recusandae esse, ducimus ipsa neque
-    quasi?
-  </p>
+{% extends "base.html" %} {% load static %}{% block content %}
+
+<img
+  src="{% static 'images/landing-bg.png' %}"
+  alt="landing-bg"
+  class="landing-bg"
+/>
+
+<div class="intro-section white-texts">
+  <div class="container">
+    <h1 class="titles">Postado</h1>
+    <p class="texts">
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae
+      harum perferendis ad minima sed consequuntur! Mollitia neque beatae
+      consectetur harum qui, perferendis ab hic id sint sequi, officiis aperiam
+      nobis?
+    </p>
+  </div>
 </div>
+
+<div class="provides-section white-texts">
+  <div class="container">
+    <h1 class="titles">Postado provides</h1>
+    <div class="wrapper">
+      <div class="provides-item">
+        <p class="texts">Socialize with your friends!</p>
+        <img src="{% static 'images/socialize.png' %}" alt="item-image" />
+      </div>
+
+      <div class="provides-item">
+        <p class="texts">Keep up with the news around you!</p>
+        <img src="{% static 'images/news.png' %}" alt="item-image" />
+      </div>
+
+      <div class="provides-item">
+        <p class="texts">Enjoy your time!</p>
+        <img src="{% static 'images/enjoy.png' %}" alt="item-image" />
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="about-section white-texts">
+  <div class="container">
+    <h1 class="titles">About us</h1>
+    <p class="texts">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quasi
+      sed illo ducimus laborum maiores. Fuga incidunt cumque beatae consectetur
+      obcaecati deserunt explicabo corporis commodi velit possimus, officiis
+      quia illum!
+    </p>
+  </div>
+</div>
+
+<div class="contact-section white-texts">
+  <div class="container">
+    <h1 class="titles">Contact us</h1>
+    <div class="form-container">
+      <h1 class="titles">Send us a message</h1>
+      <form method="post">
+        {% csrf_token %}
+        <input type="text" name="" id="" placeholder="Username" />
+        <input type="text" name="" id="" placeholder="Your email" />
+        <textarea cols="30" rows="10" placeholder="Your message"></textarea>
+        <div class="form-btn-container">
+          <button type="submit">Send</button>
+        </div>
+      </form>
+    </div>
+    <div class="contact-infos">
+      <img
+        src="{% static 'images/postado-logo.png' %}"
+        alt=""
+        class="contact-image"
+      />
+      <p class="texts contact-mail">postadoteam@gmail.com</p>
+    </div>
+  </div>
+</div>
+
+<footer class="footer-section white-texts">
+  <div class="container">
+    <p class="texts">© 2021 Postado. All rights reserved.</p>
+    <p class="texts">
+      <a href="">Terms of use</a>
+      |
+      <a href="">Privacy policy</a>
+    </p>
+  </div>
+</footer>
+
 {% endblock content %}
