--- a/templates/password/password_reset_complete.html
+++ b/templates/password/password_reset_complete.html
@@ -3,6 +3,8 @@
 {% block title %}Password reset complete{% endblock %}
 
 {% block content %}
-<h1>Password reset complete</h1>
-<p>Your new password has been set. You can log in now on the <a href="{% url 'login' %}">log in page</a>.</p>
+<div class="form-container">
+	<h1 class="titles">Password reset complete</h1>
+	<p class="texts lite-emphasis">Your new password has been set. You can log in now on the <a href="{% url 'login' %}"><b>log in page</b></a>.</p>
+</div>
 {% endblock %}
