--- a/templates/password/password_reset_confirm.html
+++ b/templates/password/password_reset_confirm.html
@@ -1,21 +1,17 @@
-<{% extends 'base.html' %}
-
+{% extends 'base.html' %}
 {% block title %}Enter new password{% endblock %}
-
 {% block content %}
-
+<div class="form-container">
 {% if validlink %}
-
-<h1>Set a new password!</h1>
-<form method="POST">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <input type="submit" value="Change my password">
-</form>
-
-{% else %}
-
-<p>The password reset link was invalid, possibly because it has already been used.  Please request a new password reset.</p>
-
+	<h1 class="titles">Set a new password!</h1>
+	<form method="POST">
+		{% csrf_token %}
+		{{ form }}
+		<input type="submit" value="Change my password">
+	</form>
+	{% else %}
+	<p class="texts">The password reset link was invalid, possibly because it has already been used.  Please request a new password reset.</p>
+</div>
 {% endif %}
+
 {% endblock %}
