--- a/templates/password/password_reset_form.html
+++ b/templates/password/password_reset_form.html
@@ -1,14 +1,17 @@
-{% extends 'base.html' %}
-
-{% block title %}Forgot Your Password?{% endblock %}
-
+{% extends 'base.html' %} {% block title %}Forgot Your Password?{% endblock %}
 {% block content %}
-  <h1>Forgot your password?</h1>
-  <p>Enter your email address below, and we'll email instructions for setting a new one.</p>
+<div class="form-container">
+  <h1 class="titles">Forgot your password?</h1>
+  <p class="texts">
+    Enter your email address below, and we'll email instructions for setting a
+    new one.
+  </p>
 
   <form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Send me instructions!">
+    {% csrf_token %} {{ form }}
+    <div class="form-btn-container">
+      <input type="submit" value="Send me instructions!" />
+    </div>
   </form>
+</div>
 {% endblock %}
