--- a/static/sass/style.scss
+++ b/static/sass/style.scss
@@ -1,9 +1,35 @@
 @import "./vars";
+@import "./functions";
+@import "./landing";
+@import "./feed";
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  transition: 0.3s;
+  user-select: none;
+}
+
+body {
+  background-color: $dark-bg-color;
+
+  &::-webkit-scrollbar {
+    width: 12px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: #212132;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: $light;
+    border-radius: 2px;
+    border: 3px solid transparent;
+    &:hover {
+      background: $primary-color;
+    }
+  }
 }
 
 .titles {
@@ -14,23 +40,103 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
+.white-texts {
+  color: $light;
+}
+
 .navbar {
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
   justify-content: space-between;
-  padding: 20px;
+  padding: 0.5em 1.5em;
+  width: 70%;
+  max-width: 1400px;
+  margin: 2em auto 0 auto;
+  position: sticky;
   top: 10px;
-  width: 99%;
-  margin: 20px auto;
-  background-color: rgba(195, 195, 195, 0.6);
+  z-index: 5;
+  background-color: rgba($dark, 0.5);
   border-radius: 15px;
   backdrop-filter: blur(20px);
+  box-shadow: 0 5px 10px rgba($deep-dark, 0.1);
 
-  .nav-items {
-    margin: 10px;
-    padding: 10px;
+  .logo {
+    width: 50px;
+    cursor: pointer;
+
+    &:hover {
+      transform: scale(1.1);
+    }
+
+    img {
+      width: 100%;
+      object-fit: cover;
+    }
   }
+
+  .navbar-nav {
+    .nav-item {
+      color: $deep-light;
+      margin: 0 0.5em;
+      text-decoration: none;
+      font-weight: bold;
+
+      &:hover {
+        text-shadow: 0 0 10px $primary-color;
+      }
+
+      img {
+        width: 50px;
+        filter: invert(1);
+      }
+    }
+  }
+
+  .nav-active {
+    border-bottom: 2px solid $light;
+  }
+}
+
+.dim {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  z-index: 2;
+  background-color: rgba($deep-dark, 0.7);
+}
+
+.container {
+  width: 60%;
+  max-width: 1200px;
+  margin: 3em auto;
+  z-index: 1;
+}
+
+.dj-message {
+  position: fixed;
+  padding: 0.6em;
+  bottom: 1em;
+  right: 1em;
+  border-radius: 1em 1em 0 1em;
+  background-color: rgba($light-bg-color, 0.4);
+  color: $deep-dark;
+  backdrop-filter: blur(15px);
+
+  .dj-message-text {
+    font-size: 1.5em;
+  }
+}
+
+#popup {
+  font-family: "Montserrat", sans-serif;
+  position: fixed;
+  z-index: 99;
+  background-color: rgba($light-bg-color, 0.5);
+  backdrop-filter: blur(15px);
+  padding: 0.4em;
+  border-radius: 0 1em 1em 1em;
 }
 
 .form-container {
@@ -39,71 +145,146 @@
   align-items: center;
   justify-content: center;
   padding: 20px;
-  width: 50%;
+  width: 60%;
   margin: 10px auto;
-  background-color: #c3c3c3;
-  border-radius: 15px;
+  background-color: $light-bg-color;
+  color: $info-color;
+  border-radius: 2em;
+  box-shadow: 0 1px 1em rgba($dark, 0.5);
+
+  .form-btn-container {
+    margin: 0 auto;
+    padding: 1em 1em 0.5em 1em;
+  }
+
+  .lite-emphasis {
+    font-size: 1em !important;
+
+    a {
+      color: $blue-color;
+      text-decoration: none;
+
+      &:hover {
+        text-shadow: 0 0 0.5em rgba($blue-color, 0.5);
+      }
+    }
+  }
+
+  .form-helptext {
+    color: $warning-color;
+    text-shadow: 0 0 1em rgba($dark, 0.1);
+    font-size: medium;
+  }
+
+  .form-errortext {
+    color: $danger-color;
+    text-shadow: 0 0 0.3em rgba($dark, 0.1);
+  }
 
   form {
     padding: 20px;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: flex-start;
+    justify-content: center;
   }
 
   * {
+    margin: 0.5em 0;
     border: 2px solid transparent;
-    font-size: 18px;
     overflow: hidden;
+    font-family: "Montserrat", sans-serif;
   }
 
   p {
-    display: flex;
-    flex-flow: column nowrap;
-    margin: 2em 0;
+    margin: 0.5em 0;
+  }
+
+  h1 {
+    margin: 0.5em 0 !important;
   }
 
   label {
-    font-family: "Montserrat", sans-serif;
+    font-size: 1.2em;
   }
 
   input {
     padding: 8px 5px;
     width: 100%;
     border-radius: 5px;
-    background-color: #e0e0e0;
+    background-color: $grey;
+    font-size: 1.5em;
 
     &[type="file"] {
       cursor: pointer;
       &::-webkit-file-upload-button {
         cursor: pointer;
         font-family: Montserrat;
-        border: none;
-        font-size: 14px;
         margin: 0 10px;
         padding: 5px;
         color: #f2f2f2;
-        background-color: #2f80ed;
+        background-color: $primary-color;
+        border: none;
         border-radius: 5px;
       }
       &:hover {
         outline: none !important;
-        border: 2px solid #2f80ed;
+        border: 2px solid $primary-color;
+      }
+    }
+
+    &[type="submit"] {
+      font-size: 1.2em;
+      padding: 0.5em 1em;
+      color: $light;
+      background-color: $success-color;
+      border-radius: 5px;
+      cursor: pointer;
+
+      &:hover {
+        box-shadow: 0px 0px 1em rgba($success-color, 0.7);
+        padding: 0.5em 1.5em;
       }
     }
 
     &:focus {
       outline: none !important;
-      border: 2px solid #2f80ed;
+      border: 2px solid $light-accent-color;
     }
   }
 
   button {
-    padding: 5px 10px;
-    color: #f2f2f2;
-    background-color: #2f80ed;
+    font-size: 1.2em;
+    padding: 0.5em 1em;
+    color: $light;
+    background-color: $success-color;
     border-radius: 5px;
     cursor: pointer;
 
     &:hover {
-      box-shadow: 0px 0px 10px rgba(47, 129, 237, 0.7);
+      box-shadow: 0px 0px 1em rgba($success-color, 0.7);
+      padding: 0.5em 1.5em;
+    }
+  }
+
+  textarea {
+    padding: 8px 5px;
+    width: 100%;
+    border: 2px solid transparent;
+    border-radius: 5px;
+    background-color: $grey;
+    font-size: 1em;
+    overflow: auto;
+    resize: none;
+
+    &:hover {
+      outline: none !important;
+      border: 2px solid $primary-color;
+    }
+
+    &:focus {
+      outline: none !important;
+      border: 2px solid $light-accent-color;
     }
   }
 }
