--- a/templates/base.html
+++ b/templates/base.html
@@ -4,18 +4,63 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=7" />
+    <link
+      rel="shortcut icon"
+      href="{% static 'images/postado-logo.png' %}"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
     <title>Postado</title>
   </head>
   <body>
     <nav class="navbar">
-      <div class="logo"></div>
-      <div class="nav-log-inout">
-        <a href="{% url 'login' %}" class="nav-items nav-login">Login</a>
-        <a href="" class="nav-items nav-register">Register</a>
+      <div class="logo" id="logo" data-url="{% url 'landing' %}">
+        <img src="{% static 'images/postado-logo.png' %}" alt="logo" />
+      </div>
+      <div class="navbar-nav">
+        {% if user.is_authenticated %}
+        <a href="{% url 'feed' %}" class="nav-item titles" data-help="FEED"
+          ><img src="{% static 'images/icons/feed.png' %}" alt="" id="nav-img"
+        /></a>
+        <a href="{% url 'create' %}" class="nav-item titles" data-help="CREATE"
+          ><img
+            src="{% static 'images/icons/create.png' %}"
+            alt=""
+            id="nav-img"
+        /></a>
+        <a href="#" class="nav-item titles" data-help="EXPLORE"
+          ><img
+            src="{% static 'images/icons/explore.png' %}"
+            alt=""
+            id="nav-img"
+        /></a>
+        <a href="#" class="nav-item titles" data-help="MESSAGES"
+          ><img
+            src="{% static 'images/icons/message.png' %}"
+            alt=""
+            id="nav-img"
+        /></a>
+        <a href="#" class="nav-item titles" data-help="PROFILE"
+          ><img
+            src="{% static 'images/icons/person.png' %}"
+            alt=""
+            id="nav-img"
+        /></a>
+        <a href="{% url 'logout' %}" class="nav-item titles" data-help="LOGOUT"
+          ><img
+            src="{% static 'images/icons/logout.png' %}"
+            alt=""
+            id="nav-img"
+        /></a>
+        {% else %}
+        <a href="{% url 'login' %}" class="nav-item titles">Login</a>
+        <a href="{% url 'register' %}" class="nav-item titles">Register</a>
+        {% endif %}
       </div>
     </nav>
-    <div class="container">{% block content %} {% endblock content %}</div>
+
+    {% include './alert.html' %}{% block content %} {% endblock content %}
+
     <script src="{% static 'js/index.js' %}"></script>
   </body>
 </html>
