--- a/templates/password/password_reset_done.html
+++ b/templates/password/password_reset_done.html
@@ -1,8 +1,11 @@
-{% extends 'base.html' %}
-
-{% block title %}Email Sent{% endblock %}
-
+{% extends 'base.html' %} 
+{% block title %}Email Sent{% endblock %} 
 {% block content %}
-  <h1>Check your inbox.</h1>
-  <p>We've emailed you instructions for setting your password. You should receive the email shortly!</p>
+<div class="form-container">
+  <h1 class="titles">Check your inbox.</h1>
+  <p class="texts">
+    We've emailed you instructions for setting your password. You should receive
+    the email shortly!
+  </p>
+</div>
 {% endblock %}
