--- a/templates/register.html
+++ b/templates/register.html
@@ -1,25 +1,27 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} {% block content %}
+<div class="container">
+  <div class="form-container">
+    <h1 class="titles">Register</h1>
+    <form method="POST">
+      {% csrf_token %} {% for field in form %} {{ field.label_tag }} {{ field }}
+      {% if field.help_text %}
+      <small class="texts form-helptext">{{ field.help_text }}</small>
+      {% endif %} {% for error in field.errors %}
 
-{% block content %}
-    <div class="form-container">
-        <h2>Register</h2>
-        <form method="POST">
-            {% csrf_token %}
+      <p class="texts form-errortext">{{ error }}</p>
+      {% endfor %} {% endfor %}
 
-            {% for field in form %}
-                <p>
-                    {{ field.label_tag }}<br>
-                    {{ field }}
-                    {% if field.help_text %}
-                        <small style="color: grey">{{ field.help_text }}</small>
-                    {% endif %}
-                    {% for error in field.errors %}
-                        <p style="color: red">{{ error }}</p>
-                    {% endfor %}
-
-            {% endfor %}
-
-            <button type="submit">Register</button>
-        </form>
-    </div>
+      <div class="form-btn-container">
+        <button type="submit">Register</button>
+      </div>
+    </form>
+    <p class="texts lite-emphasis">
+      Already registered!
+      <a href="{% url 'login' %}"><b>Login Now!</b></a>
+    </p>
+    <p class="texts lite-emphasis">
+      <a href="{% url 'password_reset' %}"><b>Forgot Your Password?</b></a>
+    </p>
+  </div>
+</div>
 {% endblock %}
