--- a/static/css/style.css
+++ b/static/css/style.css
@@ -137,6 +137,10 @@
   -ms-grid-column: 1;
   -ms-grid-column-span: 3;
   grid-column: 1/4;
+  background-color: transparent;
+  color: #f2f2f2;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 .contact-section .contact-infos {
