--- a/static/sass/_landing.scss
+++ b/static/sass/_landing.scss
@@ -97,6 +97,9 @@
       width: 100%;
       margin: 0;
       grid-column: 1/4;
+      background-color: transparent;
+      color: $light;
+      box-shadow: none;
     }
   }
 
