--- a/templates/feed.html
+++ b/templates/feed.html
@@ -39,7 +39,7 @@
         </p>
       </div>
       <div class="delete-ensure">
-        <h1 class="titles">Are you want to delete this item ?</h1>
+        <h1 class="titles">Are you sure you want to delete this post?</h1>
         <button
           class="ensure-yes texts"
           onclick=window.location.href="{% url 'delete' post.id %}"
