--- a/static/css/style.css
+++ b/static/css/style.css
@@ -353,6 +353,20 @@
   grid-row: 2/4;
 }
 
+.feed .post .post-username {
+  padding-right: 2em;
+}
+
+.feed .post .post-title {
+  padding-right: 1em;
+}
+
+.feed .post .post-content {
+  padding-right: 2em;
+  white-space: pre-line;
+  margin-bottom: 1em;
+}
+
 .feed .post .post-date {
   margin: 1em;
   -ms-flex-item-align: end;
@@ -360,6 +374,9 @@
       align-self: end;
   -ms-grid-row: 4;
   grid-row: 4;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1/3;
 }
 
 .feed .delete-ensure {
@@ -380,23 +397,26 @@
       -ms-flex-align: center;
           align-items: center;
   position: absolute;
-  bottom: 0;
+  top: 0;
   background-color: rgba(247, 246, 245, 0.7);
   -webkit-backdrop-filter: blur(15px);
           backdrop-filter: blur(15px);
-  border-radius: 0 0 2em 2em;
+  border-radius: 2em 2em 0 0;
+  -webkit-box-shadow: 0 0 1em rgba(51, 51, 51, 0.7);
+          box-shadow: 0 0 1em rgba(51, 51, 51, 0.7);
 }
 
 .feed .delete-ensure * {
   margin: 0.8em 0;
+  padding: 0.5em 1em;
+  text-align: center;
 }
 
 .feed .delete-ensure button {
   color: #f2f2f2;
   font-size: 1.2em;
-  padding: 0.5em 1em;
   border: none;
-  border-radius: 5px;
+  border-radius: 1em;
   cursor: pointer;
 }
 
