--- a/static/sass/_feed.scss
+++ b/static/sass/_feed.scss
@@ -122,18 +122,24 @@
     }
 
     .post-username {
+      padding-right: 2em;
     }
 
     .post-title {
+      padding-right: 1em;
     }
 
     .post-content {
+      padding-right: 2em;
+      white-space: pre-line;
+      margin-bottom: 1em;
     }
 
     .post-date {
       margin: 1em;
       align-self: end;
       grid-row: 4;
+      grid-column: 1/3;
     }
   }
 
@@ -146,21 +152,23 @@
     justify-content: center;
     align-items: center;
     position: absolute;
-    bottom: 0;
+    top: 0;
     background-color: rgba($light-bg-color, 0.7);
     backdrop-filter: blur(15px);
-    border-radius: 0 0 2em 2em;
+    border-radius: 2em 2em 0 0;
+    box-shadow: 0 0 1em rgba($dark, 0.7);
 
     * {
       margin: 0.8em 0;
+      padding: 0.5em 1em;
+      text-align: center;
     }
 
     button {
       color: $light;
       font-size: 1.2em;
-      padding: 0.5em 1em;
       border: none;
-      border-radius: 5px;
+      border-radius: 1em;
       cursor: pointer;
 
       &:hover {
