--- a/static/css/style.css
+++ b/static/css/style.css
@@ -214,30 +214,6 @@
 
 .feed .post img {
   width: 100%;
-  border-radius: 2em 2em 0 0;
-}
-
-.feed .post .post-delete {
-  position: absolute;
-  right: 1em;
-  top: 1em;
-  border-radius: 1em;
-  outline: none;
-  padding: 1em;
-  border: none;
-  background: rgba(247, 246, 245, 0.4);
-  -webkit-backdrop-filter: blur(15px);
-          backdrop-filter: blur(15px);
-  color: #000;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-.feed .post .post-delete:hover {
-  color: #f2f2f2;
-  background: #f44336;
-  -webkit-box-shadow: 0 0 1em rgba(244, 67, 54, 0.5);
-          box-shadow: 0 0 1em rgba(244, 67, 54, 0.5);
 }
 
 .feed .post .post-ctx {
@@ -317,34 +293,44 @@
   border-bottom: 2px solid #3b82f6;
 }
 
-.feed .post .post-image {
+.feed .post .post-image-container {
   -ms-grid-column: 1;
   -ms-grid-column-span: 5;
   grid-column: 1/6;
+  width: 100%;
+  overflow: hidden;
+  border-radius: 2em 2em 0 0;
+}
+
+.feed .post .post-image-container:hover .post-image {
+  cursor: -webkit-zoom-in;
+  cursor: zoom-in;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+.feed .post .post-image-container .post-image {
   max-height: 550px;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
 
-.feed .post .post-image:hover {
-  cursor: -webkit-zoom-in;
-  cursor: zoom-in;
-}
-
 .feed .post .zoomed-image {
-  position: fixed;
-  max-height: 100%;
-  width: 100%;
-  left: 0;
-  top: 0;
-  padding: 5px;
-  border-radius: 0;
+  position: fixed !important;
+  max-height: 100% !important;
+  width: 100% !important;
+  left: 0 !important;
+  top: 0 !important;
+  padding: 5px !important;
+  border-radius: 0 !important;
   cursor: -webkit-zoom-out !important;
   cursor: zoom-out !important;
-  -o-object-fit: contain;
-     object-fit: contain;
-  z-index: 99;
+  -o-object-fit: contain !important;
+     object-fit: contain !important;
+  z-index: 99 !important;
+  -webkit-transform: scale(1) !important;
+          transform: scale(1) !important;
 }
 
 .feed .post .post-person-image {
@@ -377,6 +363,30 @@
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-column: 1/3;
+}
+
+.feed .post-delete {
+  position: absolute;
+  right: 1em;
+  top: 1em;
+  z-index: 2;
+  border-radius: 1em;
+  outline: none;
+  padding: 1em;
+  border: none;
+  background: rgba(247, 246, 245, 0.4);
+  -webkit-backdrop-filter: blur(15px);
+          backdrop-filter: blur(15px);
+  color: #000;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.feed .post-delete:hover {
+  color: #f2f2f2;
+  background: #f44336;
+  -webkit-box-shadow: 0 0 1em rgba(244, 67, 54, 0.5);
+          box-shadow: 0 0 1em rgba(244, 67, 54, 0.5);
 }
 
 .feed .delete-ensure {
