--- a/static/sass/_feed.scss
+++ b/static/sass/_feed.scss
@@ -17,28 +17,6 @@
 
     img {
       width: 100%;
-      border-radius: 2em 2em 0 0;
-    }
-
-    .post-delete {
-      position: absolute;
-      right: 1em;
-      top: 1em;
-      border-radius: 1em;
-      outline: none;
-      padding: 1em;
-      border: none;
-      background: rgba($light-bg-color, 0.4);
-      backdrop-filter: blur(15px);
-      color: #000;
-      font-weight: bold;
-      cursor: pointer;
-
-      &:hover {
-        color: $light;
-        background: $danger-color;
-        box-shadow: 0 0 1em rgba($color: $danger-color, $alpha: 0.5);
-      }
     }
 
     .post-ctx {
@@ -93,28 +71,38 @@
       }
     }
 
-    .post-image {
+    .post-image-container {
       grid-column: 1/6;
-      max-height: 550px;
-      height: 100%;
-      object-fit: cover;
+      width: 100%;
+      overflow: hidden;
+      border-radius: 2em 2em 0 0;
 
       &:hover {
-        cursor: zoom-in;
+        .post-image {
+          cursor: zoom-in;
+          transform: scale(1.1);
+        }
+      }
+
+      .post-image {
+        max-height: 550px;
+        height: 100%;
+        object-fit: cover;
       }
     }
 
     .zoomed-image {
-      position: fixed;
-      max-height: 100%;
-      width: 100%;
-      left: 0;
-      top: 0;
-      padding: 5px;
-      border-radius: 0;
+      position: fixed !important;
+      max-height: 100% !important;
+      width: 100% !important;
+      left: 0 !important;
+      top: 0 !important;
+      padding: 5px !important;
+      border-radius: 0 !important;
       cursor: zoom-out !important;
-      object-fit: contain;
-      z-index: 99;
+      object-fit: contain !important;
+      z-index: 99 !important;
+      transform: scale(1) !important;
     }
 
     .post-person-image {
@@ -140,6 +128,28 @@
       align-self: end;
       grid-row: 4;
       grid-column: 1/3;
+    }
+  }
+
+  .post-delete {
+    position: absolute;
+    right: 1em;
+    top: 1em;
+    z-index: 2;
+    border-radius: 1em;
+    outline: none;
+    padding: 1em;
+    border: none;
+    background: rgba($light-bg-color, 0.4);
+    backdrop-filter: blur(15px);
+    color: #000;
+    font-weight: bold;
+    cursor: pointer;
+
+    &:hover {
+      color: $light;
+      background: $danger-color;
+      box-shadow: 0 0 1em rgba($color: $danger-color, $alpha: 0.5);
     }
   }
 
