--- a/templates/feed.html
+++ b/templates/feed.html
@@ -5,11 +5,13 @@
     {% for post in posts %}
     <div class="post">
       <button class="post-delete" onclick="deleteEnsure(this)">Delete</button>
-      {% if post.photo %}
-      <img class="post-image" src="{{ post.photo.url }}" alt="image" />
-      {% else %}
-      <img class="post-image" src="" alt="loading" />
-      {% endif %}
+      <div class="post-image-container">
+        {% if post.photo %}
+        <img class="post-image" src="{{ post.photo.url }}" alt="image" />
+        {% else %}
+        <p class="texts">Loading...</p>
+        {% endif %}
+      </div>
       <img
         class="post-person-image"
         src="{% static 'images/icons/person.png' %}"
@@ -42,7 +44,8 @@
         <h1 class="titles">Are you sure you want to delete this post?</h1>
         <button
           class="ensure-yes texts"
-          onclick=window.location.href="{% url 'delete' post.id %}"
+          onclick="window.location.href"
+          ="{% url 'delete' post.id %}"
         >
           Yes
         </button>
