--- a/templates/feed.html
+++ b/templates/feed.html
@@ -32,10 +32,11 @@
           ><a href=""><b class="like-count">{{ post.likes_count }}</b></a>
         </p>
         <p class="texts post-comment interact-container">
-          <img
-            src="{% static 'images/icons/comment.png' %}"
-            alt="comment-icon"
-          /><b class="comment-count">64</b>
+          <a href="{% url 'comments' post.id %}">
+            <img
+              src="{% static 'images/icons/comment.png' %}"
+              alt="comment-icon" /></a
+          ><b class="comment-count">{{ post.comments_count }}</b>
         </p>
         <p class="texts post-share interact-container">
           <img src="{% static 'images/icons/share.png' %}" alt="share-icon" />
@@ -45,8 +46,7 @@
         <h1 class="titles">Are you sure you want to delete this post?</h1>
         <button
           class="ensure-yes texts"
-          onclick="window.location.href"
-          ="{% url 'delete' post.id %}"
+          onclick=window.location.href="{% url 'delete' post.id %}"
         >
           Yes
         </button>
