--- a/static/css/style.css
+++ b/static/css/style.css
@@ -299,6 +299,7 @@
   -ms-grid-column-span: 5;
   grid-column: 1/6;
   width: 100%;
+  max-height: 550px;
   overflow: hidden;
   border-radius: 2em 2em 0 0;
 }
@@ -338,6 +339,14 @@
   -ms-grid-row: 2;
   -ms-grid-row-span: 2;
   grid-row: 2/4;
+  place-self: center;
+  height: 150px;
+  width: 150px;
+  border-radius: 100%;
+  background-position: top;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin: 0.5em;
 }
 
 .feed .post .post-username {
@@ -409,6 +418,7 @@
           align-items: center;
   position: absolute;
   top: 0;
+  z-index: 2;
   background-color: rgba(247, 246, 245, 0.7);
   -webkit-backdrop-filter: blur(15px);
           backdrop-filter: blur(15px);
@@ -495,45 +505,38 @@
   width: 100%;
   margin: 0.2em 0;
   padding: 1em 1em;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row nowrap;
-          flex-flow: row nowrap;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[5];
+      grid-template-columns: repeat(5, 1fr);
+  gap: 0.2em;
 }
 
-.comment-section .comment .comment-ctx {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column nowrap;
-          flex-flow: column nowrap;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -ms-flex-line-pack: center;
-      align-content: center;
+.comment-section .comment h2 {
+  grid-column: 2 / end;
 }
 
-.comment-section .comment img {
-  width: 50px;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 1;
-  grid-row: 1/2;
-  margin-right: 1em;
+.comment-section .comment p {
+  grid-column: 2 / end;
+  -ms-grid-row: 2;
+  grid-row: 2;
 }
 
 .comment-section .comment small {
-  -ms-flex-item-align: end;
-      align-self: flex-end;
+  -ms-grid-row: 3;
+  grid-row: 3;
+  grid-column: 1 / end;
+}
+
+.comment-section .comment img {
+  width: 60px;
+  height: 60px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 100%;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1/3;
 }
 
 .comment-form-container {
@@ -583,6 +586,131 @@
   padding: 0.5em 1em !important;
   -webkit-box-shadow: 0 0 1em rgba(16, 185, 129, 0.5);
           box-shadow: 0 0 1em rgba(16, 185, 129, 0.5);
+}
+
+.profile {
+  margin-top: 8em;
+  position: -webkit-sticky;
+  position: sticky;
+  top: calc(6em + 70px);
+  background: #e0e0e0;
+  width: 100%;
+  padding-bottom: 3em;
+  -webkit-box-shadow: 0 0 1em rgba(0, 0, 0, 0.4);
+          box-shadow: 0 0 1em rgba(0, 0, 0, 0.4);
+}
+
+.profile .p-properties {
+  width: 70%;
+  margin: auto;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[6];
+      grid-template-columns: repeat(6, 1fr);
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 1em;
+}
+
+.profile .p-properties .avatar {
+  width: 200px;
+  height: 200px;
+  margin-top: -4em;
+  border-radius: 100%;
+  border: 5px solid #e0e0e0;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.profile .p-properties .username {
+  -ms-grid-row: 2;
+  grid-row: 2;
+}
+
+.profile .p-properties .bio {
+  text-align: justify;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 6;
+  grid-column: 1/7;
+  -ms-grid-row: 3;
+  grid-row: 3;
+}
+
+.profile .p-properties .p-i-text {
+  margin: 1em;
+  padding: 1em;
+  white-space: pre-line;
+  text-align: center;
+}
+
+.profile .p-properties .p-btn {
+  font-size: 1em;
+  padding: 0.5em 0.8em;
+  cursor: pointer;
+  outline: none;
+  border: 2px solid transparent;
+  border-radius: 1em;
+  background-color: #10b981;
+  color: #f2f2f2;
+}
+
+.profile .p-properties .p-btn:hover {
+  -webkit-box-shadow: 0 0 1em #10b981;
+          box-shadow: 0 0 1em #10b981;
+}
+
+.profile .p-properties #follow {
+  background-color: #3b82f6;
+}
+
+.profile .p-properties #follow:hover {
+  -webkit-box-shadow: 0 0 1em #3b82f6;
+          box-shadow: 0 0 1em #3b82f6;
+}
+
+.profile .p-properties #unfollow {
+  background-color: #f44336;
+}
+
+.profile .p-properties #unfollow:hover {
+  -webkit-box-shadow: 0 0 1em #f44336;
+          box-shadow: 0 0 1em #f44336;
+}
+
+.profile .p-properties .p-ff {
+  border-radius: 1em;
+  cursor: pointer;
+}
+
+.profile .p-properties .p-ff:hover {
+  background-color: #f1cb85;
+  -webkit-box-shadow: 0 0 1em rgba(0, 0, 0, 0.1);
+          box-shadow: 0 0 1em rgba(0, 0, 0, 0.1);
+}
+
+.profile-posts {
+  padding-top: 3em;
+  padding-bottom: 3em;
+  -webkit-backdrop-filter: blur(20px);
+          backdrop-filter: blur(20px);
+}
+
+.profile-posts .container {
+  margin-top: 0 !important;
+}
+
+.popup {
+  position: fixed;
+  top: 10%;
+  left: 50%;
+  z-index: 5;
+  background-color: #f7f6f5;
+  -webkit-box-shadow: 0 0 1em rgba(0, 0, 0, 0.4);
+          box-shadow: 0 0 1em rgba(0, 0, 0, 0.4);
+  border-radius: 1em;
 }
 
 * {
@@ -691,8 +819,17 @@ body::-webkit-scrollbar-thumb:hover {
 
 .navbar .navbar-nav .nav-item img {
   width: 50px;
+  height: 50px;
   -webkit-filter: invert(1);
           filter: invert(1);
+}
+
+.navbar .navbar-nav .nav-item .nav-profile {
+  -o-object-fit: cover !important;
+     object-fit: cover !important;
+  border-radius: 50% !important;
+  -webkit-filter: none !important;
+          filter: none !important;
 }
 
 .navbar .nav-active {
@@ -757,7 +894,7 @@ body::-webkit-scrollbar-thumb:hover {
       -ms-flex-pack: center;
           justify-content: center;
   padding: 20px;
-  width: 60%;
+  width: 80%;
   margin: 10px auto;
   background-color: #f7f6f5;
   color: #594061;
