--- a/static/sass/style.scss
+++ b/static/sass/style.scss
@@ -3,6 +3,7 @@
 @import "./landing";
 @import "./feed";
 @import "./comments";
+@import "./profile";
 
 * {
   margin: 0;
@@ -89,7 +90,14 @@ body {
 
       img {
         width: 50px;
+        height: 50px;
         filter: invert(1);
+      }
+
+      .nav-profile {
+        object-fit: cover !important;
+        border-radius: 50% !important;
+        filter: none !important;
       }
     }
   }
@@ -146,7 +154,7 @@ body {
   align-items: center;
   justify-content: center;
   padding: 20px;
-  width: 60%;
+  width: 80%;
   margin: 10px auto;
   background-color: $light-bg-color;
   color: $info-color;
