--- a/static/sass/_feed.scss
+++ b/static/sass/_feed.scss
@@ -104,6 +104,7 @@
       object-fit: contain !important;
       z-index: 99 !important;
       transform: scale(1) !important;
+      transition: 0s !important;
     }
 
     .post-person-image {
