--- a/static/sass/_profile.scss
+++ b/static/sass/_profile.scss
@@ -88,6 +88,7 @@
   padding-top: 3em;
   padding-bottom: 3em;
   backdrop-filter: blur(20px);
+  transition: 0s;
 
   .container {
     margin-top: 0 !important;
@@ -95,11 +96,57 @@
 }
 
 .popup {
+  visibility: visible;
+  opacity: 1;
   position: fixed;
-  top: 10%;
+  top: 50%;
   left: 50%;
   z-index: 5;
+  transform: translate(-50%, -50%);
   background-color: $light-bg-color;
+  padding: 1em 1em;
+  border-radius: 2em;
   box-shadow: 0 0 1em rgba($deep-dark, 0.4);
-  border-radius: 1em;
+
+  .popup-close {
+    cursor: pointer;
+    padding: 0.4em 0em;
+    margin: 0.2em 0;
+    font-size: 1em;
+    color: $blue-color;
+
+    &:hover {
+      text-shadow: 0 0 0.5em rgba($blue-color, 0.8);
+    }
+
+    &::before {
+      content: "✖ ";
+    }
+  }
+
+  .card {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+    margin: 1em 0;
+
+    img {
+      margin: 0.5em;
+      width: 50px;
+      height: 50px;
+      border-radius: 100%;
+      object-fit: cover;
+      cursor: pointer;
+
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
+  }
+}
+
+.popup-unactive {
+  visibility: hidden;
+  opacity: 0;
 }
