--- a/templates/explore.html
+++ b/templates/explore.html
@@ -3,10 +3,10 @@
 <div class="container">
 
     <div class="form-container">
-        <form class="" role="form" method="post" id>
+        <form class="" role="form" method="POST" id>
             {% csrf_token %}
-            <input type="text">
-            <input type="submit" name="selected_tag" value="search">
+            <input type="text" id="selected_tag" name="selected_tag">
+            <input type="submit" value="search">
         </form>
 
     </div>
