--- a/static/sass/_feed.scss
+++ b/static/sass/_feed.scss
@@ -108,7 +108,7 @@
     }
 
     .post-person-image {
-      grid-row: 2/4;
+      grid-row: 2;
       place-self: center;
       height: 150px;
       width: 150px;
