--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
             alt=""
             id="nav-img"
         /></a>
-        <a href="#" class="nav-item titles" data-help="EXPLORE"
+        <a href="{% url 'explore' %}" class="nav-item titles" data-help="EXPLORE"
           ><img
             src="{% static 'images/icons/explore.png' %}"
             alt=""
