--- a/templates/explore.html
+++ b/templates/explore.html
@@ -52,9 +52,11 @@
         <p class="texts post-share interact-container">
           <img src="{% static 'images/icons/share.png' %}" alt="share-icon" />
         </p>
-          {% for tag in post.tags.all %}
-          <p>{{tag}}</p>
-          {% endfor %}
+        <p class="texts post-tag interact-container">
+            {% for tag in post.tags.all %}
+            {{tag}}
+            {% endfor %}
+        </p>
       </div>
     </div>
     {% endfor %}
