--- a/templates/explore.html
+++ b/templates/explore.html
@@ -54,7 +54,7 @@
         </p>
         <p class="texts post-tag interact-container">
             {% for tag in post.tags.all %}
-            <b>{{tag}}</b>
+            <br>{{tag}}</br>
             {% endfor %}
         </p>
       </div>
